--- a/src/html/p/experience-using-iphone-6s-for-six-months/index.html
+++ b/src/html/p/experience-using-iphone-6s-for-six-months/index.html
@@ -13,20 +13,97 @@
     <main class="container post--font-size main--post">
 
         <div class="container--post post--start-1">
-            <h1>Путь программиста — это трудный путь?</h1>
-            <p class="post--start-p">Постараемся разобраться в сегодняшней статье.</p>
+            <h1>Опыт использования iPhone 6s в течение полугода</h1>
+            <p class="post--start-p">Мой первый айфон.</p>
         </div>
 
         <figure class="post--start-img text-center">
-            <img src="/img/posts/p001.jpg" class="img-fluid" alt="Фотография ноутбука с открытым браузером">
-            <figcaption class="img--desc">Фотография ноутбука с открытым браузером</figcaption>
+            <img src="/img/posts/p009.jpg" class="img-fluid" alt="Телефон снимает фотографию">
+            <figcaption class="img--desc">Телефон снимает фотографию</figcaption>
         </figure>
 
         <div class="container--post">
             <p>
-                Вопрос, поставленный в заголовке кому-то может показаться скорее риторическим, чем правда требующим ответа. Но скорей
-                вопрос несет в себе не смысл ответа «Да» или «Нет», а более глубокое изучение вопроса трудности деятельности
-                программиста.
+                Недавно я <a href="/p/macbook-pro-2014-13-review/" class="link">писал</a> о покупке своего макбука в качестве устройства для программирования. Изначально у меня не было
+                желания полностью переходить на экосистему Apple, потому что думал, что мне достаточно будет одного макбука. Но как
+                оказалось позже - переход на экосистему Apple абсолютно верный шаг.
+            </p>
+            <h3>Чем обосновывалась моя покупка</h3>
+            <p>
+                Я решил взять попробовать iPhone 6s из-за 2 причин: я хотел попробовать экосистему Apple и мне было интересно собрать
+                приложение для iOS. И мое знакомство оказалось очень приятным, что я решил полностью перейти на экосистему Apple.
+            </p>
+            <h3>Первое впечатление от своего первого айфона</h3>
+            <p>
+                Продуманность системы, анимации, экосистема, продуманность приложений, отличные цвета и приятные материалы - это все,
+                что Вы получите от устройства Apple.
+            </p>
+            <p>
+                Часто говорят, что использование айфонов невероятно приятное, и в этом и правда убеждаешься на практике. То, какую
+                огромную работу провела Apple в полном объеме замечаешь в маленьких деталях, проработанном интерфейсе и отсутствии
+                неудобств.
+            </p>
+            <p>
+                Я смело могу порекомендовать к покупке айфона в качестве своего основного устройства, если перед Вами не стоят особые
+                задачи, для решений которых айфон не будет казаться таким сильным с технической стороны.
+            </p>
+            <h3>Большие удобства iPhone 6s</h3>
+            <p>
+                До этого времени я пользовался лишь андроид смартфонами и знал об удобстве айфонов лишь по словам людей. Да, пускай у
+                меня иногда и получалось воспользоваться айфонами и даже в течении некоторого времени, данный опыт нельзя назвать опытом
+                использования, после которого я смогу высказываться.
+            </p>
+            <p>
+                Мне действительно было интересно воспользоваться айфоном в качестве основного устройства и узнать, какие впечатления я
+                получу от экосистемы Apple. Также мне было интересно воспользоваться загрузкой моих проектов на айфон.
+            </p>
+            <p>
+                Выбрать iPhone 6s я решил из-за его актуальности, цены и размеров. Купить полностью рабочий аппарат от Apple за 10% от
+                цены —невероятное счастье для опыта. Вряд ли у меня получится описать невероятные качества данного аппарата, но я
+                постараюсь.
+            </p>
+            <h3>Отличия айфона от телефона на андроиде</h3>
+            <p>
+                Прежде всего интеграция с другими устройствами Apple выполнена отлично. Да, такое есть и у других компаниях, но их
+                решения слабее и я не пользуюсь техникой одной компании.
+            </p>
+            <p>
+                Дисплей передает цвета отлично и нет проблем с пикселями: технология Retina-экрана увеличивает количество пикселей в 2
+                раза, из-за чего восприятие в разы лучше.
+            </p>
+            <p>
+                Тактильное удовольствие дарит все больше новых эмоций и позволяет создавать все больше и больше нового контента.
+            </p>
+            <p>
+                Устройство стоит недорого, в отличие от других устройств. В связи с этим потерять или забыть устройство не так страшно и
+                не будет стоить Вам так дорого.
+            </p>
+            <p>
+                Сзади крышка айфона выполнена из алюминия, из-за чего разбить ее не представляется возможным. А материалы приятные, и
+                телефон выглядит достаточно красиво.
+            </p>
+            <h3>Проблемы iPhone 6s</h3>
+            <p>
+                Устройство уже весьма старое и некоторые нововведения iOS 15 для телефона весьма плохо сказываются на работоспособности
+                и удобстве.
+            </p>
+            <p>
+                Купить полностью рабочий аппарат за адекватные деньги трудно. Скорей всего Вы купите уже однажды проданный телефон или
+                телефон с какими-то компромиссами. К примеру, через мои руки прошло 3 iPhone 6s со следующими проблемами: на одном
+                телефоне не работал переключатель бесшумного режима, на одном телефоне был заменен дисплей, на одном телефоне была
+                батарея с 70%.
+            </p>
+            <p>
+                Как сказано выше: аппарату уже достаточно много времени и за этот долгий срок батарея точно потратит огромное количество
+                своей емкости. Проблема в том, что в данном аппарате установлена и так маленькая по объему батарея, так она еще и
+                потратила большую часть своей емкости. Мое использование айфона показало, что его хватает на 3-4 часа активного
+                использования со 100% аккумулятором.
+            </p>
+            <h3>Заключение</h3>
+            <p>
+                Данный аппарат я могу посоветовать тем, кто желает испробовать айфон в качестве основного устройства без особых
+                вложений. Последняя поддерживаемая iOS — 15, поэтому восприятие от устройства будет максимально. Но использовать iPhone
+                6s в качестве основного устройства в 2023 году не представляется возможным или будет даваться весьма трудно.
             </p>
         </div>
 
