--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -63,7 +63,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/experience-using-iphone-6s-for-six-months" class="card card--link card--rounded border-0">
-                <img src="/img/placeholders/p-4.jpg" class="card-img" alt="...">
+                <img src="/img/posts/p009.jpg" class="card-img" alt="Телефон снимает фотографию">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Опыт использования iPhone 6s</p>
                 </div>
