--- a/src/html/p/pet-project-development-what-is-it-and-for-what/index.html
+++ b/src/html/p/pet-project-development-what-is-it-and-for-what/index.html
@@ -13,20 +13,47 @@
     <main class="container post--font-size main--post">
 
         <div class="container--post post--start-1">
-            <h1>Путь программиста — это трудный путь?</h1>
+            <h1>Разработка pet-проектов — что это и для чего?</h1>
             <p class="post--start-p">Постараемся разобраться в сегодняшней статье.</p>
         </div>
 
         <figure class="post--start-img text-center">
-            <img src="/img/posts/p001.jpg" class="img-fluid" alt="Фотография ноутбука с открытым браузером">
-            <figcaption class="img--desc">Фотография ноутбука с открытым браузером</figcaption>
+            <img src="/img/posts/p010.jpg" class="img-fluid" alt="Открытый код программы">
+            <figcaption class="img--desc">Открытый код программы</figcaption>
         </figure>
 
         <div class="container--post">
             <p>
-                Вопрос, поставленный в заголовке кому-то может показаться скорее риторическим, чем правда требующим ответа. Но скорей
-                вопрос несет в себе не смысл ответа «Да» или «Нет», а более глубокое изучение вопроса трудности деятельности
-                программиста.
+                Стоит разобраться с самого начала, что такое pet-проект и проект в целом. Проект - это твоя придуманная идея,
+                реализуемая технически. Если говорить более простым языком, под проектом понимается какое-то решение, какое-то
+                приложение, сайт или игра.
+            </p>
+            <p>
+                Для изучения программирования стоит самостоятельно разрабатывать свои проекты разной направленности, чтобы понять язык
+                программирования лучше и чтобы набраться больше опыта.
+            </p>
+            <h3>Pet-проект - что это</h3>
+            <p>
+                Pet-проект - это такой же проект, как и обычно, но создаваемый исходя из личных интересов. Чаще всего pet-проекты нужны
+                для изучения какой-то новой технологии, расширения знаний и получения нового опыта в сфере программирования.
+            </p>
+            <h3>Зачем нужно вести свой pet-проект</h3>
+            <p>
+                Как и сказано выше, pet-проект может помочь лучше изучить какую-то технологию, опробовать новое технологическое решение,
+                придумать что-то интересное или отвлечься от основной деятельности.
+            </p>
+            <p>
+                Часто pet-проект не доводят до осмысленного конца, pet-проекты несут основную задачу - техническую. Изучить что-то,
+                что-то опробовать. Смысл создавать такой проект есть только для программиста, который и занимается разработкой проекта.
+            </p>
+            <p>
+                Но pet-проект можно вывести и в формат обычного проекта, если продумать его внутреннее составляющее для других
+                пользователей. Часто именно так и поступают. После смены pet-проекта на полноценный проект решение может получить
+                достаточный спрос у пользователей и даже помочь автору заработать средства, помочь решить проблему или получать
+                популярность для своего имени.
+            </p>
+            <p>
+                В заключение хотел бы пожелать удачи в ведении pet-проектов!
             </p>
         </div>
 
