--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -71,7 +71,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/pet-project-development-what-is-it-and-for-what" class="card card--link card--rounded border-0">
-                <img src="/img/placeholders/p-4.jpg" class="card-img" alt="...">
+                <img src="/img/posts/p010.jpg" class="card-img" alt="Открытый код программы">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Разработка pet-проектов - что это и для чего?</p>
                 </div>
