--- a/src/parts/p--all.html
+++ b/src/parts/p--all.html
@@ -1,68 +1,80 @@
 <div class="container container--main">
-    <div class="row row-cols-1 row-cols-lg-1 gx-2 g-lg-3">
-        <div class="col pb-3 mb-sm-0">
-            <a href="#" class="card card--link card--rounded border-0">
-                <img src="/img/placeholders/p-3.jpg" class="card-img" alt="...">
-                <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-1">Card title</p>
-                </div>
-            </a>
-        </div>
-    </div>
-</div>
-
-<div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-2 gx-3">
         <div class="col pb-3 mb-sm-0">
-            <a href="#" class="card card--link card--rounded border-0">
-                <img src="/img/placeholders/p-1.jpg" class="card-img" alt="...">
+            <a href="/p/the-path-of-a-programmer-is-a-difficult-path" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p001@min.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">Card title</p>
+                    <p class="card-title text-white mt-auto card--title card--title-2">Путь программиста — это трудный
+                        путь?</p>
                 </div>
             </a>
         </div>
         <div class="col pb-3 mb-sm-0">
-            <a href="#" class="card card--link card--rounded border-0">
-                <img src="/img/placeholders/p-2.jpg" class="card-img" alt="...">
+            <a href="/p/project-development-history-live.creagoo.ru-its-forced-closure"
+                class="card card--link card--rounded border-0">
+                <img src="/img/posts/p003.jpg" class="card-img" alt="Фотография логотипа Creagoo">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">Card title</p>
+                    <p class="card-title text-white mt-auto card--title card--title-2">История live.creagoo.ru</p>
                 </div>
             </a>
         </div>
         <div class="col pb-3 mb-sm-0">
-            <a href="#" class="card card--link card--rounded border-0">
-                <img src="/img/placeholders/p-3.jpg" class="card-img" alt="...">
+            <a href="/p/how-did-i-start-learning-programming" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p004.jpg" class="card-img" alt="Фотография с кодом программиста">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">Card title</p>
+                    <p class="card-title text-white mt-auto card--title card--title-2">С чего я начал изучать
+                        программирование</p>
                 </div>
             </a>
         </div>
         <div class="col pb-3 mb-sm-0">
-            <a href="#" class="card card--link card--rounded border-0">
-                <img src="/img/placeholders/p-4.jpg" class="card-img" alt="...">
+            <a href="/p/how-i-fight-against-burnout" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p005.jpg" class="card-img" alt="Девушка выгорела на фотографии">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">Card title</p>
-                </div>
-            </a>
-        </div>
-    </div>
-</div>
-
-<div class="container container--main">
-    <div class="row row-cols-1 row-cols-lg-2 gx-2 g-lg-3">
-        <div class="col pb-3 mb-sm-0">
-            <a href="#" class="card card--link card--rounded border-0">
-                <img src="/img/placeholders/p-2.jpg" class="card-img" alt="...">
-                <div class="card-img-overlay card--bg-gradient d-flex">
-                    <h5 class="card-title text-white mt-auto mb-0">Card title</h5>
+                    <p class="card-title text-white mt-auto card--title card--title-2">Как я борюсь против выгорания</p>
                 </div>
             </a>
         </div>
         <div class="col pb-3 mb-sm-0">
-            <a href="#" class="card card--link card--rounded border-0">
-                <img src="/img/placeholders/p-1.jpg" class="card-img" alt="...">
+            <a href="/p/how-i-develop-websites-in-php" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p006.jpg" class="card-img" alt="Открытый код программы">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <h5 class="card-title text-white mt-auto mb-0">Card title</h5>
+                    <p class="card-title text-white mt-auto card--title card--title-2">Как я разрабатываю сайты на PHP
+                    </p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="/p/the-new-generation-of-the-iphone-xr-device" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p007.jpg" class="card-img" alt="Телефон лежит на столе">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Новое поколение устройства —
+                        iPhone XR</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="/p/macbook-pro-2014-13-review" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p008.jpg" class="card-img" alt="Приоткрытая крышка ноутбука">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Macbook Pro 2014 13' — обзор</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="/p/experience-using-iphone-6s-for-six-months" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p009.jpg" class="card-img" alt="Телефон снимает фотографию">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Опыт использования iPhone 6s</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="/p/pet-project-development-what-is-it-and-for-what" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p010.jpg" class="card-img" alt="Открытый код программы">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Разработка pet-проектов - что это
+                        и для чего?</p>
                 </div>
             </a>
         </div>
