cap and changes

--- a/src/html/p/pet-project-development-what-is-it-and-for-what/index.html
+++ b/src/html/p/pet-project-development-what-is-it-and-for-what/index.html
@@ -12,6 +12,14 @@
 
     <main class="container post--font-size main--post">
 
+        <!-- <div>
+            Увеличить текст
+            Уменьшить текст
+            Отобразить якори
+            Черный текст на белом фоне
+            Белый текст на черном фоне
+        </div> -->
+
         <div class="container--post post--start-1">
             <h1>Разработка pet-проектов — что это и для чего?</h1>
             <p class="post--start-p">Постараемся разобраться в сегодняшней статье.</p>
