--- a/src/parts/head.html
+++ b/src/parts/head.html
@@ -4,13 +4,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="description" content="Special — новостной канал: удобный и красивый">
-    <meta name="keywords" content="дыбка, даниил дыбка, спешиал, special">
+    <meta name="keywords" content="спешиал, новости, креагу, даниил дыбка, дыбка, дыбка новости">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Special — новостной канал: удобный и красивый">
     <meta property="og:site_name" content="Special — новостной канал: удобный и красивый">
     <meta property="og:description" content="Special — новостной канал: удобный и красивый">
     <meta property="og:url" content="https://news.dybka.ru/">
-    <meta property="og:image" content="https://news.dybka.ru/img/logo/ico.ico">
+    <meta property="og:image" content="https://news.dybka.ru/img/logo/cap.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="600">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Special — новостной канал: удобный и красивый">
     <meta name="twitter:description" content="Special — новостной канал: удобный и красивый">
