--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -13,7 +13,7 @@
     </div>
 </nav>
 
-<footer class="footer--main">
+<footer role="contentinfo" class="footer--main">
     <div class="container container--main">
         <div class="container mb-3 text-center">
             <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3">
