--- a/src/html/updates/index.html
+++ b/src/html/updates/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('../../parts/head.html', {
-"title": "Разработка личного кабинета"
+"title": "Обновления в разработках"
 })
 
 <body>
     @@include('../../parts/header.html', {
-        "activeItem": "cabinet"
+    "activeItem": "updates"
     })
 
     <div class="container container--main">
-        <h1 class="display-5 fw-bold">Разработка личного кабинета</h1>
-        <div class="d-flex flex-wrap mb-4 align-items-center">
+        <h1 class="display-5 fw-bold">Обновления</h1>
+        <div class="d-flex flex-wrap mb-3 align-items-center">
             <p class="mb-0">
                 <a href="/articles/" aria-label="Смотреть все статьи Спешиал" class="link">Статьи</a>
             </p>
@@ -19,13 +19,13 @@
                 <path fill-rule="evenodd"
                     d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
             </svg>
-            <p class="mb-0">Кабинет</p>
+            <p class="mb-0">Обновления</p>
         </div>
     </div>
 
     <main>
 
-        @@include('../../parts/p--best.html', {
+        @@include('../../parts/p--updates.html', {
 
         })
 
