about and updates

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -14,6 +14,17 @@
             <h1>О проекте Special</h1>
         </div>
         <div class="fs-5 mb-5">
+
+            <ul class="mb-4">
+                <li>О проекте Special</li>
+                <li><a href="updates.html" class="link">
+                    Обновления Special
+                </a></li>
+                <li><a href="//it.dybka.ru" target="_blank" class="link">
+                    Еще больше от dybka.ru
+                </a></li>
+            </ul>
+
             <h2>Что такое Special?</h2>
             <p>
                 Special — это открытый источник новостей от сайта <a href="//dybka.ru" class="link">dybka.ru</a>,
