text up and down text

--- a/src/html/p/macbook-pro-2014-13-review/index.html
+++ b/src/html/p/macbook-pro-2014-13-review/index.html
@@ -4,6 +4,19 @@
 "title": ""
 })
 <link rel="stylesheet" href="/css/page.css">
+<style>
+    .post--h1-font{
+        font-size: 55px;
+    }
+
+    .post--h-font{
+        font-size: 35px;
+    }
+
+    p {
+        font-size: 23px;
+    }
+</style>
 
 <body>
     @@include('../../../parts/header.html', {
@@ -13,10 +26,10 @@
     <main class="container post--font-size main--post">
 
         <div class="container container--post">
-            <div class="row row-cols-1 row-cols-lg-3 g-2 g-lg-3">
+            <div class="row row-cols-1 row-cols-lg-3  g-2 g-lg-3">
                 <div class="col">
                     <div class="text-invert btn-rounded fs-5">
-                        <button onClick="PostTextUp()"
+                        <button onClick="PostTextUp()" aria-label="Увеличить размер шрифта на сайте"
                             class="btn btn-dark btn-post--btn px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-3" viewBox="0 0 16 16">
                                 <path
@@ -28,7 +41,7 @@
                 </div>
                 <div class="col">
                     <div class="text-invert btn-rounded fs-5">
-                        <button onClick="PostTextDown()"
+                        <button onClick="PostTextDown()" aria-label="Уменьшить размер шрифта на сайте"
                             class="btn btn-dark btn-post--btn px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-3" viewBox="0 0 16 16">
                                 <path
@@ -40,13 +53,12 @@
                 </div>
                 <div class="col">
                     <div class="text-invert btn-rounded fs-5">
-                        <button onClick="PostShowMore()"
+                        <button onClick="PostShowMore()" aria-label="Открыть подробности статьи"
                             class="btn btn-dark btn-post--btn px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-3" viewBox="0 0 16 16">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert" viewBox="0 0 16 16">
                                 <path
                                     d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z" />
                                 </svg>
-                            Подробнее
                         </button>
                     </div>
                 </div>
@@ -54,7 +66,7 @@
         </div>
 
         <div class="container--post post--start-1">
-            <h1>Macbook Pro 2014 13' — обзор</h1>
+            <h1 class="post--h1-font">Macbook Pro 2014 13' — обзор</h1>
             <p class="post--start-p">Мое самое любимое устройство.</p>
         </div>
 
@@ -69,7 +81,7 @@
                 на котором я программирую. Я часто могу слышать про то, что макбук — это отличный девайс для творческих людей и
                 программистов в том числе. Попробуем разобрать, в связи с чем люди делятся подобным мнением.
             </p>
-            <h3>Как я его покупал</h3>
+            <h3 class="post--h-font">Как я его покупал</h3>
             <p>
                 Мою модель уже не получится найти в официальном магазине или на складе в качестве остатков. Я смотрел интернет-площадки,
                 где люди выставляют свои старые товары на продажу. Главный плюс подобных интернет-площадок в том, что можно обзавестись
@@ -81,7 +93,7 @@
                 потому что прошло слишком много времени с момента покупки. Я купил устройство уже с некоторыми проблемами на дисплее, не
                 влияющие на работу. Также аккумулятор был плохо приклеен и отсутствовало 3 болта сзади на крышке.
             </p>
-            <h3>Есть макбук, есть устройства на Windows — что же выбрать</h3>
+            <h3 class="post--h-font">Есть макбук, есть устройства на Windows — что же выбрать</h3>
             <p>
                 Я всегда считал, что ответ на данный вопрос для каждого человека свой. Фактически, так и есть на самом деле, потому что
                 огромное количество людей поддерживают макбуки, а другое количество людей отдают предпочтение Windows.
@@ -97,7 +109,7 @@
                 он так дорого стоит. Да, цена действительно большая, я бы не хотел разбирать, из чего формируется такая цена, а хотел бы
                 больше времени уделить сравнению со средним ноутбуком на Windows и моим макбуком.
             </p>
-            <h3>Критика Windows</h3>
+            <h3 class="post--h-font">Критика Windows</h3>
             <p>
                 Сообщу сразу, что говорить, что за модель я не стану, потому что использую свою рабочую станцию на Windows как ПК и
                 характеристики сильно изменены. Здесь мы говорим сугубо о моем опыте использования.
@@ -134,7 +146,7 @@
                 Я не могу в полном объеме отказаться от Windows, иначе сделал бы это уже давно. Но нередко приходится заниматься
                 рутиной: очисткой, удалением, изменением и прочим.
             </p>
-            <h3>Про macOS</h3>
+            <h3 class="post--h-font">Про macOS</h3>
             <p>
                 Я не могу озвучить ничего подобного про macOS. Вряд ли все дело в том, что с момента покупки макбука прошло только
                 полгода, потому что я уже успел воспользоваться OpenCore’ром, опробовать свыше 5-ти macOS’ей и остаться максимально
@@ -165,7 +177,7 @@
                 «Завершить Safari» был недоступен. Мне пришлось выключить систему, после чего макбук предупредил меня об произошедшей
                 ошибки и предложил отправить отчет.
             </p>
-            <h3>Модель макбука</h3>
+            <h3 class="post--h-font">Модель макбука</h3>
             <p>
                 Мой выбор пал на Macbook Pro 13’ 2014. Не пугайтесь года выпуска, я смело решаю все задачи, связанные с
                 программированием, просмотром контента и прочим и не имею никаких проблем. К слову, установлена операционная система
@@ -177,7 +189,7 @@
                 официально неподдерживаемой macOS. Тем более, что есть официально поддерживаемая macOS Big Sur, между данными
                 операционными системами отличия минимальны и меня полностью все устраивает.
             </p>
-            <h3>Плюсы макбука</h3>
+            <h3 class="post--h-font">Плюсы макбука</h3>
             <p>
                 <i>Дисплей</i> макбука невероятен. Технология Retina удваивает количество пикселей дисплея, из-за чего Вы не увидите здесь
                 пиксели. Отличная калибровка дисплея позволит получать удовольствие от цветов, которые максимально приближены к
@@ -204,7 +216,7 @@
                 обмениваться данными, использовать бесшовную отправку материалов и не испытывать никакого дискомфорта в вопросе отправки
                 данных.
             </p>
-            <h3>Проблемы данного макбука</h3>
+            <h3 class="post--h-font">Проблемы данного макбука</h3>
             <p>
                 Как и было сказано выше — данный макбук уже 8 лет на рынке и купить абсолютно новый девайс не представляется возможным,
                 с огромной вероятностью Вы купите когда-то использованное устройство, так называемое б/у.
@@ -249,7 +261,7 @@
                 Решаю вопрос с диагональю с помощью подключения внешнего монитора, на котором и произвожу операции, связанные с кодом.
                 Именно поэтому я в полном объеме остаюсь довольным и не хочу ничего менять.
             </p>
-            <h3>Как я использую макбук</h3>
+            <h3 class="post--h-font">Как я использую макбук</h3>
             <p>
                 Вообще, мне пришла идея покупки легкого ноутбука после того, как я в очередной раз взял с собой свой ноутбук, который
                 весит порядка полутора-двух килограмм. Какое-то время назад я еще не был так сильно уверен в том, чтобы купить именно
@@ -269,7 +281,7 @@
                 ноутбук, который в качестве основного рабочего устройства, к которому я подключаю клавиатуру и пользуюсь внешним
                 монитором.
             </p>
-            <h3>Заключение</h3>
+            <h3 class="post--h-font">Заключение</h3>
             <p>
                 Статья не имеет большой технической части, она направлена на ответ на вопрос «Для кого лучше всего подойдет макбук» и
                 «Стоит ли взять попробовать». Далеко не у каждого будут такие впечатление от покупки устройства, все зависит от самого
