get change font size

--- a/src/html/p/macbook-pro-2014-13-review/index.html
+++ b/src/html/p/macbook-pro-2014-13-review/index.html
@@ -4,26 +4,13 @@
 "title": ""
 })
 <link rel="stylesheet" href="/css/page.css">
-<style>
-    .post--h1-font{
-        font-size: 55px;
-    }
-
-    .post--h-font{
-        font-size: 35px;
-    }
-
-    p {
-        font-size: 23px;
-    }
-</style>
 
 <body>
     @@include('../../../parts/header.html', {
 
     })
 
-    <main class="container post--font-size main--post">
+    <main id="post--main" class="container post--font-size main--post post--font-size-u1">
 
         <div class="container container--post">
             <div class="row row-cols-1 row-cols-lg-3  g-2 g-lg-3">
