--- a/src/html/p/macbook-pro-2014-13-review/index.html
+++ b/src/html/p/macbook-pro-2014-13-review/index.html
@@ -12,6 +12,18 @@
 
     <main id="post--main" class="container post--font-size main--post post--font-size-u1">
 
+        <div class="collapse" id="collapseExample">
+            <div class="card card-body">
+                Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user
+                activates the relevant trigger.
+            </div>
+        </div>
+
+        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+            aria-expanded="false" aria-controls="collapseExample">
+            Button with data-bs-target
+        </button>
+
         <div class="container container--post">
             <div class="row row-cols-1 row-cols-lg-3  g-2 g-lg-3">
                 <div class="col">
